update HTML + conexão banco de dados

--- a/-add.html
+++ b/-add.html
@@ -45,23 +45,23 @@
           </div>
 
           <div class="form-group">
-            <label for="email">Solicitante:</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Digite o nome do solicitante" required>
+            <label for="solicitante">Solicitante:</label>
+            <input type="solicitante" class="form-control" id="solicitante" name="solicitante" placeholder="Digite o nome do solicitante" required>
           </div>
 
           <div class="form-group">
-            <label for="description">Disciplina:</label>
-            <input type="text" class="form-control" id="description" name="description" placeholder="Digite o nome da disciplina na qual o equipamento será utilizado" required></textarea>
+            <label for="disciplina">Disciplina:</label>
+            <input type="text" class="form-control" id="disciplina" name="disciplina" placeholder="Digite o nome da disciplina na qual o equipamento será utilizado" required></textarea>
           </div>
           
           <div class="form-group">
-            <label for="company">Sala de aula:</label>
-            <input type="text" class="form-control" id="company" name="company" placeholder="Digite o nome / núnero da sala na qual o equipamento será utilizado" required>
+            <label for="local">Sala de aula:</label>
+            <input type="text" class="form-control" id="local" name="local" placeholder="Digite o nome / núnero da sala na qual o equipamento será utilizado" required>
           </div>
 
           <div class="form-group">
-            <label for="salary">Detalhes</label>
-            <textarea type="text" class="form-control" id="salary" name="salary" placeholder="Detalhe a prática acadêmica na qual o equipamento será utilizado."></textarea>
+            <label for="detalhes">Detalhes</label>
+            <textarea type="text" class="form-control" id="detalhes" name="detalhes" placeholder="Detalhe a prática acadêmica na qual o equipamento será utilizado."></textarea>
           </div>
 
           <input type="hidden" name="new_job" value="1">
